Refactors and simplifies the code

--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "js": ["src/content.js"],
+      "css": ["src/content.css"],
       "all_frames": true,
       "run_at": "document_start"
     }
