--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "license": "Apache 2.0",
   "devDependencies": {
-    "buffer": "^6.0.3",
-    "clang-format": "^1.2.3",
     "@parcel/config-webextension": "^2.10.3",
     "@parcel/core": "^2.10.3",
+    "buffer": "^6.0.3",
+    "clang-format": "^1.2.3",
+    "console-browserify": "^1.2.0",
+    "prettier": "^3.3.2",
     "process": "^0.11.10"
   },
   "resolutions": {
