--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
     }
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   },
   "manifest_version": 3,
   "icons": {
