--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     {
       "matches": ["https://www.infocusp.com/*"],
       "js": ["content.js"],
-      "css": ["styles.css"],
+      "css": ["style.css"],
       "run_at": "document_idle"
     }
   ]
